# CRUD-FastAPI

./: .db  .env.example  .gitignore  Dockerfile  Dockerfile.debug  Makefile  README.md  auth.py  docker-compose.debug.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  shop.db  shop.py  startup.sh
app/: main.py
app/core/: config.py  dependencies.py  logger.py  security.py
app/crud/: orders.py  product.py  user.py
app/models/: orders.py  product.py  users.py
app/routes/: orders.py  product.py  user.py
app/schemas/: errors.py  order.py  product.py  user.py
app/tests/: conftest.py  test_main.py  test_order.py  test_product.py
app/utils/: file.py
core/: config.py  dependencies.py  security.py
crud/: product.py  user.py
database/: db.py
models/: product.py  users.py
routes/: product.py  user.py
schemas/: errors.py  product.py  user.py
utils/: file.py
